--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
 @import url("https://fonts.cdnfonts.com/css/harlow-solid-italic");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
 button {
   cursor: pointer;
 }
+
 .bg {
   background-image: url(image/bg_home.png);
   background-color: black;
@@ -17,16 +20,17 @@ button {
   width: 100%;
   min-height: 100vh;
 }
-.navbar {
-  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
-}
+
 .navbar nav {
+  position: sticky;
   background-color: #393053;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 1);
   padding: 10px;
   display: flex;
   justify-content: space-between;
 }
-.navbar nav h1 {
+
+.navbar nav .logo h1 {
   font-family: "Harlow Solid Italic", sans-serif;
   font-size: 30px;
   color: white;
@@ -34,10 +38,12 @@ button {
   padding-left: 10px;
   cursor: pointer;
 }
+
 .navbar nav .home {
   position: relative;
   top: 7px;
 }
+
 .navbar nav ul {
   list-style: none;
   display: flex;
@@ -53,6 +59,7 @@ button {
   font-family: "Montserrat", sans-serif;
   font-size: 13px;
 }
+
 .menu {
   display: inline-block;
   position: relative;
@@ -68,85 +75,100 @@ button {
   width: 0;
   bottom: -2px;
 }
+
 .navbar nav .home ul li a:hover {
   color: white;
   transition: 0.5s;
 }
+
 .navbar nav .home ul li a:hover::after {
   width: 100%;
+  transition: 0.5s;
 }
+
 .navbar nav .btn {
   padding-right: 30px;
 }
+
 .navbar nav .btn a .SignIn {
   background-color: transparent;
   color: white;
   padding: 8px 25px;
   border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
   border: 1px solid #adadad;
   outline: none;
   cursor: pointer;
   transition: 0.5s;
 }
+
 .navbar nav .btn a .SignIn:hover {
   background-color: #adadad;
   transition: 0.5s;
 }
+
 .navbar nav .btn a .SignUp {
   background-color: #8d47ff;
   color: white;
   padding: 8px 25px;
   border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
   border: none;
   outline: none;
   cursor: pointer;
   transition: 0.5s;
 }
+
 .navbar nav .btn a .SignUp:hover {
   background-color: rgb(24, 24, 212);
   transition: 0.5s;
 }
 
 .right {
-  font-family: "Montserrat", sans-serif;
-  color: white;
-  width: 60%;
-  text-align: left;
   position: absolute;
   top: 210px;
   left: 300px;
+  width: 60%;
   padding: 10px;
+  font-family: "Montserrat", sans-serif;
+  color: white;
+  text-align: left;
 }
+
 .right .first {
   font-size: 20px;
   padding-bottom: 50px;
 }
+
 .right .sec {
   font-size: 15px;
-  color: #adadad;
   padding-bottom: 20px;
+  color: #adadad;
 }
+
 .right h1 {
   font-size: 40px;
   padding-bottom: 20px;
 }
+
 .explore {
-  background-color: transparent;
+  background-color: #8d47ff;
+  color: white;
   font-family: "Montserrat", sans-serif;
   font-size: 12px;
-  color: white;
   padding: 8px 20px;
   border-radius: 5px;
-  background-color: #8d47ff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
   border: none;
   outline: none;
   cursor: pointer;
   transition: 0.5s;
 }
+
 .explore:hover {
   background-color: rgb(24, 24, 212);
-  transition: 0.5s;
 }
+
 .more {
   background-color: transparent;
   font-family: "Montserrat", sans-serif;
@@ -154,32 +176,38 @@ button {
   color: white;
   padding: 8px 30px;
   border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
   border: 1px solid #adadad;
   outline: none;
   cursor: pointer;
   transition: 0.5s;
 }
+
 .more:hover {
   background-color: #adadad;
-  transition: 0.5s;
 }
-.left{
+
+.left {
   position: absolute;
-  bottom: 50px;
+  bottom: 100px;
   right: 0;
 }
-.left img{
-  width: 70%;
+
+.left img {
+  width: 60%;
   cursor: pointer;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0.2, 0.7);
 }
+
 .footer {
+  position: absolute;
+  bottom: 0;
   width: 100%;
   padding: 20px;
   text-align: center;
-  bottom: 0;
-  position: absolute;
-  color: white;
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
   font-size: 20px;
+  color: white;
 }
