--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 button {
   cursor: pointer;
 }
-
+/*-----Background-----*/
 .bg {
   background-image: url(image/bg_home.png);
   background-color: black;
@@ -20,7 +20,7 @@ button {
   width: 100%;
   min-height: 100vh;
 }
-
+/*-----Navbar-----*/
 .navbar nav {
   position: sticky;
   background-color: #393053;
@@ -103,7 +103,7 @@ button {
 }
 
 .navbar nav .btn a .SignIn:hover {
-  background-color: #adadad;
+  background-color: #585858;
   transition: 0.5s;
 }
 
@@ -120,33 +120,32 @@ button {
 }
 
 .navbar nav .btn a .SignUp:hover {
-  background-color: rgb(24, 24, 212);
+  background-color: blueviolet;
   transition: 0.5s;
 }
-
-.right {
+/*-----Kiri-----*/
+.left {
   position: absolute;
   top: 210px;
   left: 300px;
-  width: 60%;
   padding: 10px;
   font-family: "Montserrat", sans-serif;
   color: white;
   text-align: left;
 }
 
-.right .first {
+.left .first {
   font-size: 20px;
   padding-bottom: 50px;
 }
 
-.right .sec {
+.left .sec {
   font-size: 15px;
   padding-bottom: 20px;
   color: #adadad;
 }
 
-.right h1 {
+.left h1 {
   font-size: 40px;
   padding-bottom: 20px;
 }
@@ -158,7 +157,7 @@ button {
   font-size: 12px;
   padding: 8px 20px;
   border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   border: none;
   outline: none;
   cursor: pointer;
@@ -166,7 +165,7 @@ button {
 }
 
 .explore:hover {
-  background-color: rgb(24, 24, 212);
+  background-color: blueviolet;
 }
 
 .more {
@@ -176,7 +175,7 @@ button {
   color: white;
   padding: 8px 30px;
   border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   border: 1px solid #adadad;
   outline: none;
   cursor: pointer;
@@ -184,22 +183,22 @@ button {
 }
 
 .more:hover {
-  background-color: #adadad;
+  background-color: #585858;
 }
-
-.left {
+/*-----Kanan-----*/
+.right {
   position: absolute;
   bottom: 100px;
   right: 0;
 }
 
-.left img {
+.right img {
   width: 60%;
   cursor: pointer;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0.2, 0.7);
 }
-
+/*-----Bawah-----*/
 .footer {
   position: absolute;
   bottom: 0;
